tests/stage2/valid/continue.c
int main(){
    int a = 0;
    int b = 0;
    while(a < 20){
        a++;
        continue;
        b++;
    }
    return b;
}
