tests/stage2/invalid/while_no_cond.c
int main(){
    int a = 0;
    while (){
        a++;
    }
    return a;
}
